# term-squid

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile
.github/workflows/: ci.yml  release-cli.yml  release-server.yml
crates/backend/: Cargo.toml
crates/backend/migrations/: 20250930092621_initial_setup.down.sql  20250930092621_initial_setup.up.sql  20250930100858_create_core_tables.down.sql  20250930100858_create_core_tables.up.sql  20250930101001_create_concepts_expansions.down.sql  20250930101001_create_concepts_expansions.up.sql  20250930101006_create_closure_table.down.sql  20250930101006_create_closure_table.up.sql  20250930134333_add_fhir_version.down.sql  20250930134333_add_fhir_version.up.sql
crates/backend/src/: config.rs  error.rs  main.rs
crates/backend/src/api/: mod.rs  parameters.rs
crates/backend/src/api/operations/: expand.rs  lookup.rs  mod.rs  subsumes.rs  translate.rs  validate.rs
crates/backend/src/api/resources/: capability.rs  codesystem.rs  conceptmap.rs  mod.rs  valueset.rs
crates/backend/src/models/: mod.rs
crates/backend/src/store/: mod.rs  postgres.rs  traits.rs
crates/backend/static/: index.html
crates/backend/static/assets/: CodeSystems-BF4788gp.js  CodeSystems-CRq3MwhH.js  ConceptMaps-7m-KENFB.js  ConceptMaps-BkzTClhB.js  Home-B0bH0oxB.css  Home-B0dsjXEA.js  Home-BYVopY57.js  ResourceList-B8jE_QPJ.css  ResourceList.module-GgWq0ozS.js  ValueSets-BeRx3D09.js  ValueSets-JrZ7T2Ov.js  index-BZcIzKFp.css  index-CKMDTJnB.js  index-CeS1SIOx.css  index-D5B-MIVu.js
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  package.rs
crates/cli/src/commands/: create.rs  import.rs  import_defaults.rs  list.rs  mod.rs  stats.rs
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Layout.module.css  Layout.tsx
frontend/src/components/common/: Button.module.css  Button.tsx  Input.module.css  Input.tsx
frontend/src/pages/: CodeSystems.tsx  ConceptMaps.tsx  Home.module.css  Home.tsx  ResourceList.module.css  ValueSets.tsx
frontend/src/styles/: global.css
scripts/: download-icd10cm.sh  download-loinc.sh
