[workspace]
members = ["crates/backend", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OctoFHIR Team"]
license = "MIT"

[workspace.dependencies]
# Web Framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error Handling
anyhow = "1"
thiserror = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "stream"] }
tar = "0.4"
flate2 = "1"
futures-util = "0.3"

# Async trait
async-trait = "0.1"

# Static file embedding
rust-embed = "8"
mime_guess = "2"