[package]
name = "term-squid-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
# Web Framework
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Configuration
config.workspace = true
dotenvy.workspace = true

# Error Handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true

# Async trait
async-trait.workspace = true

# Static file embedding
rust-embed.workspace = true
mime_guess.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"