[package]
name = "term-squid-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "term-squid-cli"
path = "src/main.rs"

[dependencies]
# CLI
clap.workspace = true
tokio.workspace = true

# Database
sqlx.workspace = true

# HTTP Client
reqwest.workspace = true
indicatif.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Compression
tar.workspace = true
flate2.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error Handling
anyhow.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
futures-util.workspace = true